VS2005/Common/VeCADAPI/CadApi.h

#define STR_DG_PLG_DESC          6415   
#define STR_DG_PLG_AUTHOR        6416   
#define STR_DG_PLG_COPYRIGHT     6417   
#define STR_DG_PLG_OPTIONS       6421   
#define STR_DG_PLG_DISABLE       6422   
#define STR_DG_PLG_ENABLE        6423   
#define STR_DG_PLG_IMGEDITOR     6430   
typedef unsigned long VDWG;       
typedef void (CALLBACK* F_MOUSEMOVE)  (VDWG hDwg, int Button, int Flags, int Xwin, int Ywin, double Xdwg, double Ydwg, double Zdwg);
typedef void (CALLBACK* F_MOUSEDOWN)  (VDWG hDwg, int Button, int Flags, int Xwin, int Ywin, double Xdwg, double Ydwg, double Zdwg);
typedef void (CALLBACK* F_MOUSEUP)    (VDWG hDwg, int Button, int Flags, int Xwin, int Ywin, double Xdwg, double Ydwg, double Zdwg);
typedef void (CALLBACK* F_MOUSEDBLCLK)(VDWG hDwg, int Button, int Flags, int Xwin, int Ywin, double Xdwg, double Ydwg, double Zdwg);
typedef void (CALLBACK* F_MOUSESNAP)  (VDWG hDwg, double Delta, double* pXdwg, double* pYdwg, double* pZdwg);
typedef void (CALLBACK* F_KEYDOWN) (VDWG hDwg, UINT VirtKey, UINT Flags, BOOL bCtrl, BOOL bShift);
typedef void (CALLBACK* F_REGEN) (VDWG hDwg, int Step, int Percent, int iEnt);
typedef void (CALLBACK* F_LOADSAVE) (VDWG hDwg, int Mode, int Step, int Percent);
typedef void (CALLBACK* F_DISTANCE) (VDWG hDwg, int Step, double Perim, double Dist, double X0, double Y0, double Z0, double X1, double Y1, double Z1);
typedef void (CALLBACK* F_AREA) (VDWG hDwg, int Step, double AreaLast, double AreaTotal);
typedef void (CALLBACK* F_PROMPT) (VDWG hDwg, LPCTSTR szText);
typedef void (CALLBACK* F_SELPAGE) (VDWG hDwg, LPCTSTR szPageName);
typedef void (CALLBACK* F_SELCODEPAGE) (VDWG hDwg);
typedef void (CALLBACK* F_FONTREPLACE) (VDWG hDwg, LPCTSTR szOrigFont, int bBigFont);
typedef void (CALLBACK* F_PAINT) (VDWG hDwg, HDC hDrawDC, int Mode, int WinW, int WinH, double DwgLeft, double DwgBottom, double DwgRight, double DwgTop, double UnitsPerPixel);
typedef void (CALLBACK* F_VIEW) (VDWG hDwg, int WinW, int WinH, double DwgLeft, double DwgBottom, double DwgRight, double DwgTop, double UnitsPerPixel);
typedef void (CALLBACK* F_DRAWIMAGE) (VDWG hDwg, HDC hDrawDC, int WinLeft, int WinTop, int WinRight, int WinBottom, int ImgID, int ImgLeft, int ImgBottom, int ImgWidth, int ImgHeight);
typedef void (CALLBACK* F_SAVEDIB) (VDWG hDwg, LPCTSTR szFileName, BITMAPFILEHEADER* pFileHdr, BITMAPINFO* pInfo, BYTE* pBits);
typedef void (CALLBACK* F_ENTCREATE) (VDWG hDwg, VHANDLE hEnt);
typedef void (CALLBACK* F_ENTLOAD) (VDWG hDwg, VHANDLE hEnt);
typedef void (CALLBACK* F_ENTCOPY) (VDWG hDwg, VHANDLE hEntNew, VHANDLE hEntSrc);
typedef void (CALLBACK* F_ENTCHANGE) (VDWG hDwg, VHANDLE hEnt);
typedef void (CALLBACK* F_ENTERASE) (VDWG hDwg, VHANDLE hEnt);
typedef void (CALLBACK* F_ENTMOVE) (VDWG hDwg, VHANDLE hEnt, double* pDX, double* pDY, double* pDZ);
typedef void (CALLBACK* F_ENTSELECT) (VDWG hDwg, VHANDLE hEnt, BOOL bSelect, BOOL bFinal);
typedef void (CALLBACK* F_EXECUTE) (VDWG hDwg, int Cmd);
typedef void (CALLBACK* F_ENGRAVE) (VDWG hDwg, int Stage, double Percent, double x0, double y0, double x1, double y1);
typedef void (CALLBACK* F_POLYFILL) (VDWG hDwg, VHANDLE hEnt, HDC hDrawDC, const POINT* pPoints, const int* pPolyCounts, int nCount, COLORREF Color, BOOL bSelect);
typedef void (CALLBACK* F_GRIPDRAG) (VDWG hDwg, VHANDLE hEnt, int iGrip, double* pDX, double* pDY, double* pDZ);
typedef void (CALLBACK* F_GRIPMOVE) (VDWG hDwg, VHANDLE hEnt, int iGrip, double* pDX, double* pDY, double* pDZ);
typedef void (CALLBACK* F_CMDSTART) (VDWG hDwg, int Cmd, int nSteps);
typedef void (CALLBACK* F_CMDLBDOWN) (VDWG hDwg, int Cmd, int Step, double* pX, double* pY, double* pZ);
typedef void (CALLBACK* F_CMDFINISH) (VDWG hDwg, int Cmd);
typedef void (CALLBACK* F_CE_GETNAME )(VDWG hDwg, VHANDLE hEnt);
typedef void (CALLBACK* F_CE_GETPROPS)(VDWG hDwg, VHANDLE hEnt);
typedef void (CALLBACK* F_CE_PUTPROP )(VDWG hDwg, VHANDLE hEnt, int PropId, LPCTSTR szValue);
typedef void (CALLBACK* F_CE_GETEXTS )(VDWG hDwg, VHANDLE hEnt, double* pXmin, double* pYmin, double* pZmin, double* pXmax, double* pYmax, double* pZmax);
typedef void (CALLBACK* F_CE_NGRIPS  )(VDWG hDwg, VHANDLE hEnt, int* pN);
typedef void (CALLBACK* F_CE_GETGRIP )(VDWG hDwg, VHANDLE hEnt, UINT iGrip, double* pX, double* pY, double* pZ );
typedef void (CALLBACK* F_CE_MOVEGRIP)(VDWG hDwg, VHANDLE hEnt, UINT iGrip, double dx, double dy, double dz );
typedef void (CALLBACK* F_CE_MOVE    )(VDWG hDwg, VHANDLE hEnt, double dx, double dy, double dz );
typedef void (CALLBACK* F_CE_ROTATE  )(VDWG hDwg, VHANDLE hEnt, double x0, double y0, double z0, double Angle, int Plane);
typedef void (CALLBACK* F_CE_SCALE   )(VDWG hDwg, VHANDLE hEnt, double x0, double y0, double z0, double ScaleX, double ScaleY, double ScaleZ);
typedef void (CALLBACK* F_CE_MIRROR  )(VDWG hDwg, VHANDLE hEnt, double A1, double B1, int Plane);
typedef void (CALLBACK* F_CE_DISPLAY )(VDWG hDwg, VHANDLE hEnt);
typedef void (CALLBACK* F_CC_EXECUTE )(VDWG hDwg, int Id);
typedef void (CALLBACK* F_CC_DRAG    )(VDWG hDwg, int Id, int nPoints, double x, double y, double z);
BOOL CADAPI CadRegistration (int RegCode);
int CADAPI CadGetVersion (TCHAR* szVer);
void CADAPI CadOnEventMouseMove   (F_MOUSEMOVE   pFunc);
void CADAPI CadOnEventMouseDown   (F_MOUSEDOWN   pFunc);
void CADAPI CadOnEventMouseUp     (F_MOUSEUP     pFunc);
void CADAPI CadOnEventMouseDblClk (F_MOUSEDBLCLK pFunc);
void CADAPI CadOnEventMouseSnap   (F_MOUSESNAP   pFunc);
void CADAPI CadOnEventKeyDown     (F_KEYDOWN     pFunc);
void CADAPI CadOnEventRegen       (F_REGEN       pFunc);
void CADAPI CadOnEventLoadSave    (F_LOADSAVE    pFunc);
void CADAPI CadOnEventDistance    (F_DISTANCE    pFunc);
void CADAPI CadOnEventArea        (F_AREA        pFunc);
void CADAPI CadOnEventPrompt      (F_PROMPT      pFunc);
void CADAPI CadOnEventSelPage     (F_SELPAGE     pFunc);
void CADAPI CadOnEventSelCodepage (F_SELCODEPAGE pFunc);
void CADAPI CadOnEventFontReplace (F_FONTREPLACE pFunc);
void CADAPI CadOnEventPaint       (F_PAINT       pFunc);
void CADAPI CadOnEventView        (F_VIEW        pFunc);
void CADAPI CadOnEventDrawImage   (F_DRAWIMAGE   pFunc);
void CADAPI CadOnEventSaveDib     (F_SAVEDIB     pFunc);
void CADAPI CadOnEventEntCreate   (F_ENTCREATE   pFunc);
void CADAPI CadOnEventEntLoad     (F_ENTLOAD     pFunc);
void CADAPI CadOnEventEntCopy     (F_ENTCOPY     pFunc);
void CADAPI CadOnEventEntErase    (F_ENTERASE    pFunc);
void CADAPI CadOnEventEntMove     (F_ENTMOVE     pFunc);
void CADAPI CadOnEventEntChange   (F_ENTCHANGE   pFunc);
void CADAPI CadOnEventEntSelect   (F_ENTSELECT   pFunc);
void CADAPI CadOnEventExecute     (F_EXECUTE     pFunc);
void CADAPI CadOnEventGripDrag    (F_GRIPDRAG    pFunc);
void CADAPI CadOnEventGripMove    (F_GRIPMOVE    pFunc);
void CADAPI CadOnEventCmdStart    (F_CMDSTART    pFunc);
void CADAPI CadOnEventCmdLBDown   (F_CMDLBDOWN   pFunc);
void CADAPI CadOnEventCmdFinish   (F_CMDFINISH   pFunc);
void CADAPI CadOnEventEngrave     (F_ENGRAVE     pFunc);
void CADAPI CadOnEventPolyFill    (F_POLYFILL    pFunc, BOOL bText);
void CADAPI CadOnEventCEntGetName  (F_CE_GETNAME  pFunc);
void CADAPI CadOnEventCEntGetProps (F_CE_GETPROPS pFunc);
void CADAPI CadOnEventCEntPutProp  (F_CE_PUTPROP  pFunc);
void CADAPI CadOnEventCEntGetExts  (F_CE_GETEXTS  pFunc);
void CADAPI CadOnEventCEntNumGrips (F_CE_NGRIPS   pFunc);
void CADAPI CadOnEventCEntGetGrip  (F_CE_GETGRIP  pFunc);
void CADAPI CadOnEventCEntMoveGrip (F_CE_MOVEGRIP pFunc);
void CADAPI CadOnEventCEntMove     (F_CE_MOVE     pFunc);
void CADAPI CadOnEventCEntRotate   (F_CE_ROTATE   pFunc);
void CADAPI CadOnEventCEntScale    (F_CE_SCALE    pFunc);
void CADAPI CadOnEventCEntMirror   (F_CE_MIRROR   pFunc);
void CADAPI CadOnEventCEntDisplay  (F_CE_DISPLAY  pFunc);
void CADAPI CadOnEventCCmdExecute   (F_CC_EXECUTE pFunc);
void CADAPI CadOnEventCCmdDrag      (F_CC_DRAG    pFunc);
void CADAPI CadSetReturnStr (LPCTSTR szText);
void CADAPI CadSetReturnInt (int val);
void CADAPI CadSetReturnDbl (double val);
double CADAPI CadGetReturnX ();
double CADAPI CadGetReturnY ();
double CADAPI CadGetReturnZ ();
int      CADAPI CadSetParam (int Param, int Value);  
int      CADAPI CadGetParam (int Param);
void     CADAPI CadSetDefaultDir (LPCTSTR szDir);
void     CADAPI CadGetDefaultDir (TCHAR* szDir);
BOOL     CADAPI CadSetDefaultFont (LPCTSTR szFontFile);
void     CADAPI CadGetDefaultFont (TCHAR* szFontFile);
void     CADAPI CadSetMsgTitle (LPCTSTR szTitle);
void     CADAPI CadSetViewCoefs (double ZoomVal, double PanHor, double PanVer);
void     CADAPI CadGetViewCoefs (double* pZoomVal, double* pPanHor, double* pPanVer);
BOOL     CADAPI CadProfileLoad (LPCTSTR szName);
BOOL     CADAPI CadProfileSave (LPCTSTR szName);
void     CADAPI CadProfileGetName (TCHAR* szName);
COLORREF CADAPI CadSetColor    (UINT iColor, COLORREF ColorRGB);
COLORREF CADAPI CadGetColor    (UINT iColor);
UINT     CADAPI CadSeekColor   (COLORREF ColorRGB);
BOOL     CADAPI CadLoadColors  (LPCTSTR szFileName);
BOOL     CADAPI CadSaveColors  (LPCTSTR szFileName);
COLORREF CADAPI CadColorPutRGB (UINT iColor, COLORREF ColorRGB);
COLORREF CADAPI CadColorGetRGB (UINT iColor);
UINT     CADAPI CadColorSeek   (COLORREF ColorRGB);
HBRUSH   CADAPI CadGetBrush    (UINT iColor);
HPEN     CADAPI CadGetPen      (UINT iColor, int Width);
BOOL     CADAPI CadGetLayerWndVisible ();
void     CADAPI CadSetShowSysCursor (BOOL bShow);
BOOL     CADAPI CadGetShowSysCursor ();
void     CADAPI CadSetCrossSize (UINT Size);
UINT     CADAPI CadGetCrossSize ();
void     CADAPI CadSetShowCross (BOOL bShow);
BOOL     CADAPI CadGetShowCross ();
void     CADAPI CadSetCurveQuality (UINT Quality);
UINT     CADAPI CadGetCurveQuality ();
void     CADAPI CadSetCharQuality (UINT Quality);
UINT     CADAPI CadGetCharQuality ();
void     CADAPI CadSetDrawCheckStep (UINT Step);
UINT     CADAPI CadGetDrawCheckStep ();
void     CADAPI CadSetMinCharSize (int Size);
int      CADAPI CadGetMinCharSize ();
void     CADAPI CadSetMinCharFSize (int Size);
int      CADAPI CadGetMinCharFSize ();
void     CADAPI CadSetMinEntSize (int Size);
int      CADAPI CadGetMinEntSize ();
void     CADAPI CadSetMiterLimit (int MLimit);
int      CADAPI CadGetMiterLimit ();
void     CADAPI CadSetAutoSel (BOOL bAutoSel);
BOOL     CADAPI CadGetAutoSel ();
void     CADAPI CadSetAutoSelRect (BOOL bAutoSelRect);
int      CADAPI CadGetAutoSelRect ();
void     CADAPI CadSetSelShiftAdd (BOOL bSelShiftAdd);
BOOL     CADAPI CadGetSelShiftAdd ();
void     CADAPI CadSetSelInside (BOOL bSelInside);
BOOL     CADAPI CadGetSelInside ();
void     CADAPI CadSetSelByLayer (BOOL bSelByLayer);
BOOL     CADAPI CadGetSelByLayer ();
void     CADAPI CadSetUnselAfterEdit (BOOL bUnselAfterEdit);
BOOL     CADAPI CadGetUnselAfterEdit ();
COLORREF CADAPI CadSetSelColor (COLORREF SelColor);
COLORREF CADAPI CadGetSelColor ();
void     CADAPI CadSetSelLine (int SelLine);
int      CADAPI CadGetSelLine ();
void     CADAPI CadSetPickboxSize (int PickboxSize);
int      CADAPI CadGetPickboxSize ();
void     CADAPI CadSetUseGrips (BOOL bUseGrips);
BOOL     CADAPI CadGetUseGrips ();
COLORREF CADAPI CadSetGripColor (COLORREF GripColor);
COLORREF CADAPI CadGetGripColor ();
void     CADAPI CadSetGripSize (int GripSize);
int      CADAPI CadGetGripSize ();
void     CADAPI CadSetImageBorder (BOOL bImgBorder);
BOOL     CADAPI CadGetImageBorder ();
void     CADAPI CadSetDxfDecPrec (UINT dec);
UINT     CADAPI CadGetDxfDecPrec ();
void     CADAPI CadSetDxfVersion (UINT ver);
UINT     CADAPI CadGetDxfVersion ();
void     CADAPI CadSetDwgVersion (UINT ver);
UINT     CADAPI CadGetDwgVersion ();
void     CADAPI CadSetAngleUnit (int uang);
int      CADAPI CadGetAngleUnit ();
void     CADAPI CadSetFileFilter  (int ExtType);
int      CADAPI CadGetFileFilter  ();
void     CADAPI CadShowEmptyRect (BOOL bShow);
void     CADAPI CadSetBlinkTime (int nMSec);
VDWG CADAPI CadCreate ();
void CADAPI CadDelete (VDWG hDwg);
void CADAPI CadPurge (VDWG hDwg, int Mode);
void CADAPI CadFileNew (VDWG hDwg, HWND hWin);
BOOL CADAPI CadFileOpen (VDWG hDwg, HWND hWin, LPCTSTR szFileName);
BOOL CADAPI CadFileOpenMem (VDWG hDwg, HWND hWin, void* pMem);
BOOL CADAPI CadFileSave (VDWG hDwg, HWND hWin);