VS2005/Common/VeCADAPI/CadApi.bas

Public Const STR_DG_PLG_DESC = 6415
Public Const STR_DG_PLG_AUTHOR = 6416
Public Const STR_DG_PLG_COPYRIGHT = 6417
Public Const STR_DG_PLG_OPTIONS = 6421
Public Const STR_DG_PLG_DISABLE = 6422
Public Const STR_DG_PLG_ENABLE = 6423
Public Const STR_DG_PLG_IMGEDITOR = 6430
Public Declare Function CadRegistration Lib "vecad.dll" (ByVal RegCode As Long) As Long
Public Declare Function CadGetVersion Lib "vecad.dll" (ByVal szVer As Any) As Long
Public Declare Sub      CadOnEventMouseMove Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventMouseDown Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventMouseUp Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventMouseDblClk Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventMouseSnap Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventKeyDown Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventRegen Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventLoadSave Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventDistance Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventArea Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventPrompt Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventSelPage Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventSelCodepage Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventFontReplace Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventPaint Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventView Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventDrawImage Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventSaveDib Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventEntCreate Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventEntLoad Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventEntCopy Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventEntErase Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventEntMove Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventEntChange Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventEntSelect Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventExecute Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventGripDrag Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventGripMove Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCmdStart Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCmdLBDown Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCmdFinish Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventEngrave Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventPolyFill Lib "vecad.dll" (ByVal pFunc As Any, ByVal bText As Long)
Public Declare Sub      CadOnEventCEntGetName Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCEntGetProps Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCEntPutProp Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCEntGetExts Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCEntNumGrips Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCEntGetGrip Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCEntMoveGrip Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCEntMove Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCEntRotate Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCEntScale Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCEntMirror Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCEntDisplay Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCCmdExecute Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadOnEventCCmdDrag Lib "vecad.dll" (ByVal pFunc As Any)
Public Declare Sub      CadSetReturnStr Lib "vecad.dll" (ByVal szText As String)
Public Declare Sub      CadSetReturnInt Lib "vecad.dll" (ByVal val As Long)
Public Declare Sub      CadSetReturnDbl Lib "vecad.dll" (ByVal val As Double)
Public Declare Function CadGetReturnX Lib "vecad.dll" () As Double
Public Declare Function CadGetReturnY Lib "vecad.dll" () As Double
Public Declare Function CadGetReturnZ Lib "vecad.dll" () As Double
Public Declare Function CadSetParam Lib "vecad.dll" (ByVal Param As Long, ByVal Value As Long) As Long
Public Declare Function CadGetParam Lib "vecad.dll" (ByVal Param As Long) As Long
Public Declare Sub      CadSetDefaultDir Lib "vecad.dll" (ByVal szDir As String)
Public Declare Sub      CadGetDefaultDir Lib "vecad.dll" (ByVal szDir As Any)
Public Declare Function CadSetDefaultFont Lib "vecad.dll" (ByVal szFontFile As String) As Long
Public Declare Sub      CadGetDefaultFont Lib "vecad.dll" (ByVal szFontFile As Any)
Public Declare Sub      CadSetMsgTitle Lib "vecad.dll" (ByVal szTitle As String)
Public Declare Sub      CadSetViewCoefs Lib "vecad.dll" (ByVal ZoomVal As Double, ByVal PanHor As Double, ByVal PanVer As Double)
Public Declare Sub      CadGetViewCoefs Lib "vecad.dll" (ByVal pZoomVal As Long, ByVal pPanHor As Long, ByVal pPanVer As Long)
Public Declare Function CadProfileLoad Lib "vecad.dll" (ByVal szName As String) As Long
Public Declare Function CadProfileSave Lib "vecad.dll" (ByVal szName As String) As Long
Public Declare Sub      CadProfileGetName Lib "vecad.dll" (ByVal szName As Any)
Public Declare Function CadSetColor Lib "vecad.dll" (ByVal iColor As Long, ByVal ColorRGB As Long) As Long
Public Declare Function CadGetColor Lib "vecad.dll" (ByVal iColor As Long) As Long
Public Declare Function CadSeekColor Lib "vecad.dll" (ByVal ColorRGB As Long) As Long
Public Declare Function CadLoadColors Lib "vecad.dll" (ByVal szFileName As String) As Long
Public Declare Function CadSaveColors Lib "vecad.dll" (ByVal szFileName As String) As Long
Public Declare Function CadColorPutRGB Lib "vecad.dll" (ByVal iColor As Long, ByVal ColorRGB As Long) As Long
Public Declare Function CadColorGetRGB Lib "vecad.dll" (ByVal iColor As Long) As Long
Public Declare Function CadColorSeek Lib "vecad.dll" (ByVal ColorRGB As Long) As Long
Public Declare Function CadGetBrush Lib "vecad.dll" (ByVal iColor As Long) As Long
Public Declare Function CadGetPen Lib "vecad.dll" (ByVal iColor As Long, ByVal Width As Long) As Long
Public Declare Function CadGetLayerWndVisible Lib "vecad.dll" () As Long
Public Declare Sub      CadSetShowSysCursor Lib "vecad.dll" (ByVal bShow As Long)
Public Declare Function CadGetShowSysCursor Lib "vecad.dll" () As Long
Public Declare Sub      CadSetCrossSize Lib "vecad.dll" (ByVal Size As Long)
Public Declare Function CadGetCrossSize Lib "vecad.dll" () As Long
Public Declare Sub      CadSetShowCross Lib "vecad.dll" (ByVal bShow As Long)
Public Declare Function CadGetShowCross Lib "vecad.dll" () As Long
Public Declare Sub      CadSetCurveQuality Lib "vecad.dll" (ByVal Quality As Long)
Public Declare Function CadGetCurveQuality Lib "vecad.dll" () As Long
Public Declare Sub      CadSetCharQuality Lib "vecad.dll" (ByVal Quality As Long)
Public Declare Function CadGetCharQuality Lib "vecad.dll" () As Long
Public Declare Sub      CadSetDrawCheckStep Lib "vecad.dll" (ByVal Step As Long)
Public Declare Function CadGetDrawCheckStep Lib "vecad.dll" () As Long
Public Declare Sub      CadSetMinCharSize Lib "vecad.dll" (ByVal Size As Long)
Public Declare Function CadGetMinCharSize Lib "vecad.dll" () As Long
Public Declare Sub      CadSetMinCharFSize Lib "vecad.dll" (ByVal Size As Long)
Public Declare Function CadGetMinCharFSize Lib "vecad.dll" () As Long
Public Declare Sub      CadSetMinEntSize Lib "vecad.dll" (ByVal Size As Long)
Public Declare Function CadGetMinEntSize Lib "vecad.dll" () As Long
Public Declare Sub      CadSetMiterLimit Lib "vecad.dll" (ByVal MLimit As Long)
Public Declare Function CadGetMiterLimit Lib "vecad.dll" () As Long
Public Declare Sub      CadSetAutoSel Lib "vecad.dll" (ByVal bAutoSel As Long)
Public Declare Function CadGetAutoSel Lib "vecad.dll" () As Long
Public Declare Sub      CadSetAutoSelRect Lib "vecad.dll" (ByVal bAutoSelRect As Long)
Public Declare Function CadGetAutoSelRect Lib "vecad.dll" () As Long
Public Declare Sub      CadSetSelShiftAdd Lib "vecad.dll" (ByVal bSelShiftAdd As Long)
Public Declare Function CadGetSelShiftAdd Lib "vecad.dll" () As Long
Public Declare Sub      CadSetSelInside Lib "vecad.dll" (ByVal bSelInside As Long)
Public Declare Function CadGetSelInside Lib "vecad.dll" () As Long
Public Declare Sub      CadSetSelByLayer Lib "vecad.dll" (ByVal bSelByLayer As Long)
Public Declare Function CadGetSelByLayer Lib "vecad.dll" () As Long
Public Declare Sub      CadSetUnselAfterEdit Lib "vecad.dll" (ByVal bUnselAfterEdit As Long)
Public Declare Function CadGetUnselAfterEdit Lib "vecad.dll" () As Long
Public Declare Function CadSetSelColor Lib "vecad.dll" (ByVal SelColor As Long) As Long
Public Declare Function CadGetSelColor Lib "vecad.dll" () As Long
Public Declare Sub      CadSetSelLine Lib "vecad.dll" (ByVal SelLine As Long)
Public Declare Function CadGetSelLine Lib "vecad.dll" () As Long
Public Declare Sub      CadSetPickboxSize Lib "vecad.dll" (ByVal PickboxSize As Long)
Public Declare Function CadGetPickboxSize Lib "vecad.dll" () As Long
Public Declare Sub      CadSetUseGrips Lib "vecad.dll" (ByVal bUseGrips As Long)
Public Declare Function CadGetUseGrips Lib "vecad.dll" () As Long
Public Declare Function CadSetGripColor Lib "vecad.dll" (ByVal GripColor As Long) As Long
Public Declare Function CadGetGripColor Lib "vecad.dll" () As Long
Public Declare Sub      CadSetGripSize Lib "vecad.dll" (ByVal GripSize As Long)
Public Declare Function CadGetGripSize Lib "vecad.dll" () As Long
Public Declare Sub      CadSetImageBorder Lib "vecad.dll" (ByVal bImgBorder As Long)
Public Declare Function CadGetImageBorder Lib "vecad.dll" () As Long
Public Declare Sub      CadSetDxfDecPrec Lib "vecad.dll" (ByVal dec As Long)
Public Declare Function CadGetDxfDecPrec Lib "vecad.dll" () As Long
Public Declare Sub      CadSetDxfVersion Lib "vecad.dll" (ByVal ver As Long)
Public Declare Function CadGetDxfVersion Lib "vecad.dll" () As Long
Public Declare Sub      CadSetDwgVersion Lib "vecad.dll" (ByVal ver As Long)
Public Declare Function CadGetDwgVersion Lib "vecad.dll" () As Long
Public Declare Sub      CadSetAngleUnit Lib "vecad.dll" (ByVal uang As Long)
Public Declare Function CadGetAngleUnit Lib "vecad.dll" () As Long
Public Declare Sub      CadSetFileFilter Lib "vecad.dll" (ByVal ExtType As Long)
Public Declare Function CadGetFileFilter Lib "vecad.dll" () As Long
Public Declare Sub      CadShowEmptyRect Lib "vecad.dll" (ByVal bShow As Long)
Public Declare Sub      CadSetBlinkTime Lib "vecad.dll" (ByVal nMSec As Long)
Public Declare Function CadCreate Lib "vecad.dll" () As Long
Public Declare Sub      CadDelete Lib "vecad.dll" (ByVal hDwg As Long)
Public Declare Sub      CadPurge Lib "vecad.dll" (ByVal hDwg As Long, ByVal Mode As Long)
Public Declare Sub      CadFileNew Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long)
Public Declare Function CadFileOpen Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal szFileName As String) As Long
Public Declare Function CadFileOpenMem Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal pMem As Any) As Long
Public Declare Function CadFileSave Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long) As Long
